<resources>
    <string name="app_name">Light</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_home">"首页"</string>
    <string name="tab_favorites">"喜爱"</string>
    <string name="tab_settings">"设置"</string>
    <string name="tab_info">"信息"</string>

    <string name="title_home">"首页"</string>
    <string name="title_main">"RGB Model"</string>
    <string name="title_favorites">"喜爱"</string>
    <string name="title_settings">"设置"</string>
    <string name="title_info">"信息"</string>

    <string name="back">"返回"</string>
    <string name="help">"帮助"</string>
    <string name="save">保存</string>
    <string name="exit">"退出"</string>

    <string name="fragment_home_text">"这是首页"</string>
    <string name="fragment_favorites_text">"这是喜爱"</string>
    <string name="fragment_settings_text">"这是设置"</string>
    <string name="fragment_info_text">"这是信息"</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">AboutUsActivity</string>


    <!--Add Page-->
    <string name="title_add_device">Add Device</string>
    <string name="title_single_light">单色灯</string>
    <string name="title_RGB_light">RGB灯ARROW</string>
    <string name="title_CCT_light">CCT灯M</string>
    <string name="title_change_device">Change Device</string>

    <!--Info Page-->
    <string name="info_about_us">关于我们</string>
    <string name="info_share_like">分享到likedin</string>
    <string name="info_share_facebook">分享到facebook</string>
    <string name="info_help_us">帮助我们进步</string>
    <string name="info_comment">评价</string>

    <!--Setting Page-->
    <string name="setting_password">设置与更新密码</string>
    <string name="setting_question">说明书和常见问题解答</string>
    <string name="setting_system_version">检查更新</string>
    <string name="system_version">当前版本v1.0</string>

    <!--Alarm Clock Page-->
    <string name="alarm_clock_title">闹钟</string>
    <string name="alarm_icon_info">闹钟</string>
    <string name="alarm_open_time">打开时间</string>
    <string name="alarm_close_time">关闭时间</string>
    <string name="alarm_choose_mode">选择模式</string>

    <!--Favorites Page-->
    <string name="favorites_mode_title">Model</string>
    <string name="gradual_change_mode">渐变模式</string>
    <string name="lighting_mode">闪电模式</string>
    <string name="hopping_mode">跳变模式</string>
    <string name="custom_mode">自定义模式</string>
    <string name="favorites_color_title">Color</string>
    <string name="favorites_clock_title">Timer</string>
    <string name="favorites_delete_tip">您确认要删除这项喜好吗？</string>
    <string name="favorites_delete_yes">确认</string>
    <string name="favorites_delete_no">取消</string>

    <!--Light Mode-->
    <string name="lighting_mode_title">闪电模式</string>

    <!--Hopping Mode-->
    <string name="hopping_mode_title">跳变模式</string>

    <!--Monochrome Mode-->
    <string name="monochrome_mode_title">单色循环</string>

    <!--FireCracker Mode-->
    <string name="firecracker_mode_title">爆竹模式</string>

    <!--gradual change Mode-->
    <string name="gradual_change_mode_title">渐变模式</string>



    <!--Custom Mode-->
    <string name="custom_mode_page_title">自定义模式</string>
    <string name="custom_mode_title">自定义</string>

    <!--Main Page-->
    <string name="main_page_edit">编辑</string>

    <!--About Us Page-->
    <string name="about_us">根据第三方市场研究公司艾瑞咨询的数据，京东（JD.com）是中国最大的自营式电商企业，2015年第一季度在中国自营式B2C电商市场的占有率为56.3%。目前，京东集团旗下设有京东商城、京东金融、拍拍网、京东智能、O2O及海外事业部。2014年5月，京东在美国纳斯达克证券交易所正式挂牌上市，是中国第一个成功赴美上市的大型综合型电商平台，与腾讯、百度等中国互联网巨头共同跻身全球前十大互联网公司排行榜。2014年，京东市场交易额达到2602亿元，净收入达到1150亿元。
京东致力于为消费者提供愉悦的在线购物体验。通过内容丰富、人性化的网站（www.jd.com）和移动客户端，京东以富有竞争力的价格，提供具有丰富品类及卓越品质的商品和服务，以快速可靠的方式送达消费者，并且提供灵活多样的支付方式。另外，京东还为第三方卖家提供在线销售平台和物流等一系列增值服务。</string>

    <!--Question Page-->
    <string name="question_answer">1、如何检索本站的信息？

　　您只需要在本站网页右上角的“搜索内容”框内，输入任意关键词或精确短语，敲回车键或者点击搜索框右侧的go按钮，即可实现在全站内检索。

　　2、浏览网页时怎样调整字号的大小？

　　您可以点击本站网页正文标题右下角设置的“大、中、小”，调整字体的大小。

　　3、如何打印网页正文？

　　您只需要在“文件”菜单上，单击“打印”，选定你需要的打印选项。

　　4、如何保存网页正文？

　　您只需要在“文件”菜单上，单击“另存为”，根据需求选择文件“保存类型”保存即可。

　　5、如何创建当前网页的桌面快捷方式？

　　您只需要用鼠标右键单击当前网页，然后单击“创建快捷方式”即可。

　　6、如何用电子邮件发送当前网页？

　　您只需要在“文件”菜单上，单击“发送”，根据需求选择单击“电子邮件页面”或“电子邮件链接”，在邮件窗口中填写有关内容，发送邮件即可。

　　7、网页为什么打不开？

　　如果您通过局域网上网时，由于局域网通往外部的出口带宽限制，连接网站时发生超时错误都会发生连接不上的问题。如果遇到网页打不开的问题，有时只须刷新即可，有时需要您换个时间再登陆。

　　8、浏览网页时遇到乱码怎么办？

　　在浏览网页时如出现乱码，可用如下办法解决：使用IE6.X、IE7.X浏览网页时，可在“查看”菜单上单击“编码”，然后选择“简体中文GB2312”来解决。

　　9、遇到问题如何与我们联系？

　　如在浏览本站网页时遇到问题或有任何建议，请点击本站网页下方网站编辑部邮箱sgcc-info@sgcc.com.cn，发送电子邮件即可。</string>

    <!--Reset Password Page-->
    <string name="reset_pass_old">原密码</string>
    <string name="reset_pass_new">新密码</string>
    <string name="reset_pass_type_again">重复密码</string>
</resources>
