<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jackgu.light.fragment.ResetPasswordFragment">

    <com.example.jackgu.light.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/reset_pass_old"
            android:gravity="center|right" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/old_pass" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/reset_pass_new"
            android:gravity="center|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/new_pass" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/reset_pass_type_again"
            android:gravity="center|right"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/type_again" />
    </LinearLayout>


</LinearLayout>
