<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.jackgu.light.fragment.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.example.jackgu.light.view.TitleView
        android:id="@+id/settings_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border">
        <TextView
            android:id="@+id/change_password_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_password"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_alignParentRight="true"
            android:src="@drawable/arraw"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border">
        <TextView
            android:id="@+id/question_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_question"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentRight="true"
            android:src="@drawable/arraw"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border">
        <TextView
            android:id="@+id/system_version_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_system_version"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/system_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_version"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="45dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_alignParentRight="true"
            android:src="@drawable/arraw"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>

</LinearLayout>
