<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jackgu.light.fragment.FavoritesFragment">

    <com.example.jackgu.light.view.TitleView
        android:id="@+id/favorites_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/mode_panel">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mode_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/mode" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_mode_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorites_mode_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/mode_panel">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/color_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_color_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorites_color_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clock_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/color_panel">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/clock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_clock_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorites_clock_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/delete_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/half_transparent_delete_panel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/color_half_transparent" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:id="@+id/mode_delete_container"
                android:background="@drawable/imageborder">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/favorites_delete_tip"
                    android:layout_margin="10dp"
                    />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/favorites_delete_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorites_delete_yes"/>
                    <Button
                        android:id="@+id/favorites_delete_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorites_delete_no"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
