<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jackgu.light.fragment.AlarmClockFragment">

    <com.example.jackgu.light.view.TitleView
        android:id="@+id/alarm_clock_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_transparent"
            android:src="@drawable/favor_btn_off"
            android:tag="favor_btn_off"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/show_time_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/alarm_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/clock" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_icon_info" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/open_time"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/alarm_open_time" />

                <TextView
                    android:id="@+id/alarm_open_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/close_time"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/alarm_close_time" />

                <TextView
                    android:id="@+id/alarm_close_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_time_panel"
            android:background="@drawable/border"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:id="@+id/choose_mode"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/alarm_choose_mode" />

                <TextView
                    android:id="@+id/alarm_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/set_close_clock_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/half_transparent_close_panel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/color_half_transparent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <com.example.jackgu.light.wheel.WheelView
                    android:id="@+id/clock_vertical_close_wheel1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1" />

                <com.example.jackgu.light.wheel.WheelView
                    android:id="@+id/clock_vertical_close_wheel2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_open_clock_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/half_transparent_open_panel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/color_half_transparent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <com.example.jackgu.light.wheel.WheelView
                    android:id="@+id/clock_vertical_open_wheel1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1" />

                <com.example.jackgu.light.wheel.WheelView
                    android:id="@+id/clock_vertical_open_wheel2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_mode_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/half_transparent_mode_panel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/color_half_transparent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:id="@+id/mode_wheel_container">
                <com.example.jackgu.light.wheel.WheelView
                    android:id="@+id/mode_vertical_wheel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
